@@ -1,21 +1,0 @@
-#!/bin/sh
-### BEGIN INIT INFO
-# Provides:          neutron-plugin-mlnx-agent
-# Required-Start:    $network $local_fs $remote_fs $syslog
-# Required-Stop:     $remote_fs
-# Should-Start:      mysql postgresql rabbitmq-server keystone
-# Should-Stop:       mysql postgresql rabbitmq-server keystone
-# Default-Start:     2 3 4 5
-# Default-Stop:      0 1 6
-# Short-Description: Neutron Mellanox Agent
-# Description:       Mellanox SDN agent for OpenStack Neutron
-### END INIT INFO
-
-# Authors: James Page <james.page@ubuntu.com>
-
-DESC="OpenStack Neutron Mellanox Plugin Agent"
-PROJECT_NAME=neutron
-NAME=${PROJECT_NAME}-plugin-mlnx-agent
-# --config-file=/etc/neutron/neutron.conf will be happened 
-# to DAEMON_ARGS later by openstack-pkg-tools
-DAEMON_ARGS="--config-file=/etc/neutron/plugins/mlnx/mlnx_conf.ini"
