@@ -1,1 +1,0 @@
-usr/bin/neutron-mlnx-agent usr/bin
