@@ -1,1 +1,0 @@
-etc/neutron/plugins/mlnx/* etc/neutron/plugins/mlnx
